--- a/public/index.html
+++ b/public/index.html
@@ -45,18 +45,25 @@
             </section>
             <section id="tickets">
                 Here are some links to sites to buy tickets
-                <div class="carousel" id="carousel">
-                  <div class="carousel inner">
-                    <div class="slide" id="slide0">
-                    </div>
-                    <div class="slide" id="slide1">
-                    </div>
-                    <div class="slide" id="slide2">
-                    </div>
-                  </div>
-                  <div class="arrow arrow-left" id="left-arrow"></div>
-                  <div class="arrow arrow-right" id="right-arrow"></div>
-                </div>
+               <div class="wrapper">
+  
+  <div class="carousel">
+    <div class="inner">
+      <div class="slide active">
+        <h1>1</h1>
+      </div>
+      <div class="slide">
+        <h1>2</h1>
+      </div>
+      <div class="slide">
+        <h1>3</h1>
+      </div>
+    </div>
+    <div class="arrow arrow-left"></div>
+    <div class="arrow arrow-right"></div>
+  </div>
+
+</div>
             </section>
             <section id="contact">
                 Here is a fake email address
