all requirements met, touch up needed

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+  <link rel="shortcut icon" href="./media/ski_site_resources/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./media/ski_site_resources/favicon.ico" type="image/x-icon">
+
 </head>
 <body>
 
@@ -31,42 +35,82 @@
 
       <div id="content">
             <section id="home" >
-              <br>
-              <br>
-              <br>
-              <br><br><br><br><br><br><br><br><br>
+              <br><br><br><br><br><br>
                 Welcome to skiTropolis! The all-in-one solution to optimizing your ski trip!
+                <div class="greeting">
+                </div>
             </section>
             <section id="about">
                 The only online tool that lets you optimize your mountain search based on your preferences! Instead of just looking for the cheapest lift tickets skiTropolis uses an algorithm to factor in driving distance as well as percentage of trails open to lead to the optimal skiing experience!
             </section>
             <section id="mountains">
                 Here is a list of clickable mountains
+                <div class="container"> 
+                <div class="col" id="im1"> 
+                  <img style="max-width:100%;
+max-height:100%;" src="./media/ski_site_resources/mountain_one.jpg">
+                </div>
+                <div class="col" id="im2"> 
+                  <img style="max-width:100%;
+max-height:100%;" src="./media/ski_site_resources/mountain_two.jpg">
+                </div>
+                <div class="col" id="im3">
+                  <img style="max-width:100%;
+max-height:100%;" src="./media/ski_site_resources/mountain_three.jpg">
+                </div>
+                <div class="col" id="im4">
+                  <img style="max-width:100%;
+max-height:100%;" src="./media/ski_site_resources/mountain_four.jpg">
+                </div>
+                <div class="col" id="im5">
+                  <img style="max-width:100%;
+max-height:100%;" src="./media/ski_site_resources/mountain_five.jpg">
+                </div>
+                <div class="col" id="im6">
+                  <img style="max-width:100%;
+max-height:100%;" src="./media/ski_site_resources/mountain_six.jpg">
+                </div>
+                </div>
+
+ 
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">x</span>
+    <p>Visit the mountain's site to get more info (use info specific to pic later if time permits)</p>
+  </div>
+
+</div>
+
             </section>
             <section id="tickets">
                 Here are some links to sites to buy tickets
                <div class="wrapper">
-  
-  <div class="carousel">
-    <div class="inner">
-      <div class="slide active">
-        <h1>1</h1>
-      </div>
-      <div class="slide">
-        <h1>2</h1>
-      </div>
-      <div class="slide">
-        <h1>3</h1>
-      </div>
-    </div>
-    <div class="arrow arrow-left"></div>
-    <div class="arrow arrow-right"></div>
-  </div>
-
-</div>
+                <div class="carousel">
+                  <div class="inner">
+                    <div class="slide active">
+                      <h1>1</h1>
+                    </div>
+                    <div class="slide">
+                      <h1>2</h1>
+                    </div>
+                    <div class="slide">
+                      <h1>3</h1>
+                    </div>
+                  </div>
+                  <div class="arrow arrow-left"></div>
+                  <div class="arrow arrow-right"></div>
+                </div>
+              </div>
             </section>
             <section id="contact">
-                Here is a fake email address
+              <div class="vid_div">
+              <video width="320" height="240" controls>
+                  <source src="./media/ski_site_resources/ski_vid.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+              </div<
+                <p class="trickyP">Please don't email us, but if you feel you must: slipperyEmailAddress@slidingBackAndForth.com</p>
             </section>
             <!-- should probably move footer -->
             <footer>
@@ -75,7 +119,9 @@
                 <source src="./media/ski_site_resources/One of those days 2 - Candide Thovex.mp4" type="video/mp4" controls>
               </video>
             -->
-              <p>hi</p>
+              <p>hi   <i class="fa fa-facebook-official"></i>    <i class="fa fa-pinterest-square"></i>
+   <i class="fa fa-tumblr-square"></i>  <i class="fa fa-reddit-square"></i>  
+   <i class="fa fa-twitter-square"></i>  </p>
             </footer>
         </div><!-- /#content -->
 
