--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,17 @@
             <section id="home" >
               <br><br><br><br><br><br>
                 Welcome to skiTropolis! The all-in-one solution to optimizing your ski trip!
+                <div class="greeting_container">
                 <div class="greeting">
                 </div>
+              </div>
             </section>
             <section id="about">
+              <p>
                 The only online tool that lets you optimize your mountain search based on your preferences! Instead of just looking for the cheapest lift tickets skiTropolis uses an algorithm to factor in driving distance as well as percentage of trails open to lead to the optimal skiing experience!
+              </p>
+              <p> Here's a scalable camera icon! 
+              </p><i class="fa fa-camera-retro fa-5x"></i> 
             </section>
             <section id="mountains">
                 Here is a list of clickable mountains
@@ -77,25 +83,22 @@ max-height:100%;" src="./media/ski_site_resources/mountain_six.jpg">
 <div id="myModal" class="modal">
   <div class="modal-content">
     <span class="close">x</span>
-    <p>Visit the mountain's site to get more info (use info specific to pic later if time permits)</p>
+    <p>Visit the mountain's site to get more info (use info specific to the picture later if time permits)</p>
   </div>
 
 </div>
 
             </section>
             <section id="tickets">
-                Here are some links to sites to buy tickets
+               <p> Here are some more ski pictures. It'd be great if these were ticket site banners though! Tickets! </p>
                <div class="wrapper">
                 <div class="carousel">
                   <div class="inner">
                     <div class="slide active">
-                      <h1>1</h1>
                     </div>
                     <div class="slide">
-                      <h1>2</h1>
                     </div>
                     <div class="slide">
-                      <h1>3</h1>
                     </div>
                   </div>
                   <div class="arrow arrow-left"></div>
@@ -104,13 +107,16 @@ max-height:100%;" src="./media/ski_site_resources/mountain_six.jpg">
               </div>
             </section>
             <section id="contact">
+              <div>
+                <p class="trickyP">Please don't email us, but if you feel you must: slipperyEmailAddress@slidingBackAndForth.com</p>
+              </div>
               <div class="vid_div">
-              <video width="320" height="240" controls>
+              <video width="400" height="440" controls>
                   <source src="./media/ski_site_resources/ski_vid.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
-              </div<
-                <p class="trickyP">Please don't email us, but if you feel you must: slipperyEmailAddress@slidingBackAndForth.com</p>
+            </div>
+
             </section>
             <!-- should probably move footer -->
             <footer>
@@ -119,9 +125,9 @@ max-height:100%;" src="./media/ski_site_resources/mountain_six.jpg">
                 <source src="./media/ski_site_resources/One of those days 2 - Candide Thovex.mp4" type="video/mp4" controls>
               </video>
             -->
-              <p>hi   <i class="fa fa-facebook-official"></i>    <i class="fa fa-pinterest-square"></i>
+              <h1> <i class="fa fa-facebook-official"></i>    <i class="fa fa-pinterest-square"></i>
    <i class="fa fa-tumblr-square"></i>  <i class="fa fa-reddit-square"></i>  
-   <i class="fa fa-twitter-square"></i>  </p>
+   <i class="fa fa-twitter-square"></i>  </h1>
             </footer>
         </div><!-- /#content -->
 
