code cleanup a bit, still should clean sass

--- a/public/index.html
+++ b/public/index.html
@@ -107,9 +107,7 @@ max-height:100%;" src="./media/ski_site_resources/mountain_six.jpg">
               </div>
             </section>
             <section id="contact">
-              <div>
-                <p class="trickyP">Please don't email us, but if you feel you must: slipperyEmailAddress@slidingBackAndForth.com</p>
-              </div>
+             
               <div class="vid_div">
               <video width="400" height="440" controls>
                   <source src="./media/ski_site_resources/ski_vid.mp4" type="video/mp4">
@@ -120,11 +118,11 @@ max-height:100%;" src="./media/ski_site_resources/mountain_six.jpg">
             </section>
             <!-- should probably move footer -->
             <footer>
-              <!--
-              <video width="100%">
-                <source src="./media/ski_site_resources/One of those days 2 - Candide Thovex.mp4" type="video/mp4" controls>
-              </video>
-            -->
+               <div>
+                <p>Wow, the above video stays vertically centered even when the window is resized! </p>
+                <p class="trickyP">Please don't email us, but if you feel you must: slipperyEmailAddress@slidingBackAndForth.com</p>
+              </div>
+              
               <h1> <i class="fa fa-facebook-official"></i>    <i class="fa fa-pinterest-square"></i>
    <i class="fa fa-tumblr-square"></i>  <i class="fa fa-reddit-square"></i>  
    <i class="fa fa-twitter-square"></i>  </h1>
