--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@ max-height:100%;" src="./media/ski_site_resources/mountain_six.jpg">
             </section>
             <!-- should probably move footer -->
             <footer>
-               <div>
+               <div class="anim_contain">
                 <p>Wow, the above video stays vertically centered even when the window is resized! </p>
                 <p class="trickyP">Please don't email us, but if you feel you must: slipperyEmailAddress@slidingBackAndForth.com</p>
               </div>
